# GBI-Basic-Frontend

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: game_window.rs  main.rs  slint_uis.rs
src/slint_uis/: main_window.rs
ui/: main_window.slint
