[package]
name = "gbi-basic-frontend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gbi-basic-frontend"
path = "src/main.rs"

[dependencies.game-boy-inator]
path = "game-boy-inator"
version = "*"
features = [
    # "cpu-debug",
    # "ppu-debug"
    ]

[dependencies.sdl2]
version = "=0.35.1"
features = ["bundled",
        "static-link"
    ]

[dependencies]
sdl2-sys = "=0.35.1"