[package]
name = "gbi-basic-frontend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "gbi-basic-frontend"
path = "src/main.rs"

[dependencies.game-boy-inator]
path = "game-boy-inator"
version = "*"
[features]
default = ["gui"]
gui = ["slint", "slint-build", "rfd"]
cpu-debug = []
"ppu-debug" = []

[dependencies.sdl2]
version = "=0.35.1"
features = ["bundled",
        "static-link"
    ]

[dependencies]
sdl2-sys = "=0.35.1"
cfg-if = "1"
slint = {version = "0.2", optional = true}
rfd = {version = "0.8", optional = true}

[build-dependencies]
slint-build = {version = "0.2", optional = true}